--- a/src/components/layout/TopNavbar.module.css
+++ b/src/components/layout/TopNavbar.module.css
@@ -173,6 +173,7 @@
     position: absolute;
     left: 0;
     font-size: 2.2rem;
+    color: var(--text-primary);
   }
   
   .rightGroup {
